--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <name>excel-data-extractor</name>
   <properties>
     <poi-version>3.11</poi-version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <build>
     <finalName>Excel-Data-Extractor</finalName>
@@ -15,6 +16,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
+        <version>2.3</version>
         <executions>
           <execution>
             <phase>package</phase>
